--- a/infra/docker-compose-token.yml
+++ b/infra/docker-compose-token.yml
@@ -1,8 +1,8 @@
 version: "3.3"
 
 services:
-  token-helper:
-    image: smartbcity/token-helper:0.1
-    container_name: token-helper
+  did-gateway:
+    image: smartbcity/did-gateway:experimental
+    container_name: did-gateway
     ports:
       - "8090:8090"
