--- a/infra/k8s/idp.yaml
+++ b/infra/k8s/idp.yaml
@@ -5,14 +5,14 @@ metadata:
 data:
   verifier-config.json: |
     {
-      "verifierUiUrl": "https://idp.walt-test.cloud/sharecredential?state=",
-      "verifierApiUrl": "https://idp.walt-test.cloud/api/siop/default",
+      "verifierUiUrl": "http://idpkit:8091/sharecredential?state=",
+      "verifierApiUrl": "http://idpkit:8091/api/siop/default",
       "additionalPolicies": [
       ],
       "wallets": {
         "walt.id": {
           "id": "walt.id",
-          "url": "https://wallet.walt-test.cloud",
+          "url": "http://walletkit:8092",
           "presentPath": "api/siop/initiatePresentation/",
           "receivePath" : "api/siop/initiateIssuance/",
           "description": "walt.id web wallet"
@@ -21,7 +21,7 @@ data:
     }
   idp-config.json: |
     {
-      "externalUrl": "https://idp.walt-test.cloud",
+      "externalUrl": "http://idpkit:8091",
         "jsProjectExternalUrl":"http://localhost:80",
         "claimConfig": {
         "vc_mappings": [
@@ -147,17 +147,6 @@ data:
     {
     }
 ---
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: idp-data-volume-claim
-spec:
-  accessModes:
-    - ReadWriteMany
-  resources:
-    requests:
-      storage: 10Gi
----
 kind: Deployment
 apiVersion: apps/v1
 metadata:
@@ -176,23 +165,27 @@ spec:
     spec:
       containers:
         - name: idpkit
-          image: waltid/idpkit:latest
+          image: teddysmartb/smartb-idpkit:latest
           volumeMounts:
             - name: idp-config
               mountPath: "/waltid/idp/config/"
               readOnly: true
             - mountPath: "/waltid/idp/data/"
               name: idp-data
-            - name: idpkit-nft-key-config
-              mountPath: "/waltid/idp/nftconfig/"
           env:
             - name: WALTID_DATA_ROOT
               value: "/waltid/idp"
             - name: WALTID_CONFIG_PATH
-              value: "/waltid/idp/nftconfig/"
+              value: "/waltid/idp/config/"
           args:
             - run
             - --bind-all
+#            uncomment to init client
+#            - config
+#            - --oidc
+#            - clients
+#            - register
+#            - --all-redirect-uris
           ports:
             - containerPort: 8080
               name: http-api
@@ -203,98 +196,15 @@ spec:
         - name: idp-data
           persistentVolumeClaim:
             claimName: idp-data-volume-claim
-        - name: idpkit-nft-key-config
-          secret:
-            secretName: idpkit-nft-key-config
 ---
-kind: Deployment
-apiVersion: apps/v1
-metadata:
-    name: idpkit-web
-spec:
-    replicas: 1
-    selector:
-        matchLabels:
-            app: idpkit-web
-    template:
-        metadata:
-            labels:
-                app: idpkit-web
-            annotations:
-                deployment/id: "_DEFAULT_DEPLOYMENT_"
-        spec:
-            containers:
-                - name: idpkit-web
-                  image: waltid/idpkit-web:latest
-                  env:
-                    - name: VERIFIER_ADDRESS
-                      value: https://idp.walt-test.cloud
-                    - name: API_ADDRESS
-                      value: https://idp.walt-test.cloud
-                  ports:
-                      - containerPort: 80
-                        name: http-web
----
-kind: Service
 apiVersion: v1
+kind: Service
 metadata:
   name: idpkit
 spec:
-  ports:
-    - name: http
-      port: 80
-      targetPort: http-api
-      protocol: TCP
   selector:
     app: idpkit
----
-kind: Service
-apiVersion: v1
-metadata:
-    name: idpkit-web
-spec:
-    ports:
-        - name: http
-          port: 80
-          targetPort: http-web
-          protocol: TCP
-    selector:
-        app: idpkit-web
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: idpkit
-  annotations:
-    kubernetes.io/ingress.class: "nginx"
-    cert-manager.io/cluster-issuer: letsencrypt-prod
-spec:
-  tls:
-    - hosts:
-        - idp.walt-test.cloud
-      secretName: idp-tls-secret
-  rules:
-    - host: idp.walt-test.cloud
-      http:
-        paths:
-          - path: /api
-            pathType: Prefix
-            backend:
-              service:
-                name: idpkit
-                port:
-                  number: 80
-          -   path: /verifier-api
-              pathType: Prefix
-              backend:
-                  service:
-                      name: idpkit
-                      port:
-                          number: 80
-          -   path: /
-              pathType: Prefix
-              backend:
-                  service:
-                      name: idpkit-web
-                      port:
-                          number: 80
+  ports:
+    - port: 8091
+      targetPort: 8080
+  type: LoadBalancer
