--- a/infra/k8s/wallet.yaml
+++ b/infra/k8s/wallet.yaml
@@ -66,7 +66,7 @@ spec:
     spec:
       containers:
         - name: walletkit
-          image: waltid/walletkit:latest
+          image: smartbcity/smartb-wallet:0.0.1
           volumeMounts:
             - name: wallet-config
               mountPath: "/waltid/wallet/config/"
