--- a/infra/k8s/volumes/volume.yaml
+++ b/infra/k8s/volumes/volume.yaml
@@ -1,10 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: idp-data-volume-claim
+  name: nfs-smartbe-pvc
 spec:
   accessModes:
     - ReadWriteMany
+  storageClassName: ""
   resources:
     requests:
-      storage: 10Gi
+      storage: 100Gi
+  volumeName: nfs-smartbe-pv
