fix volume name

--- a/infra/k8s/init/idp-create-client.yaml
+++ b/infra/k8s/init/idp-create-client.yaml
@@ -30,4 +30,4 @@ spec:
       volumes:
         - name: idp-data
           persistentVolumeClaim:
-            claimName: idp-data-volume-claim
+            claimName: nfs-smartbe-pvc
