--- a/infra/k8s/keycloak-clean.yaml
+++ b/infra/k8s/keycloak-clean.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: v1
 kind: Service
 metadata:
@@ -41,3 +40,11 @@ spec:
               value: admin
             - name: KEYCLOAK_ADMIN_PASSWORD
               value: admin
+            - name: KC_DB_URL
+              value: jdbc:postgresql://postgres-keycloak/keycloak
+            - name: KC_DB_PASSWORD
+              value: password
+            - name: KC_DB_USERNAME
+              value: postgres
+            - name: KC_DB
+              value: postgres
